# unumbio-technical-test

./: .gitignore  CLAUDE.md  Investigacion.md  Makefile  PROMPT.md  README.md  main.py  pyproject.toml  requirements.txt  test.py  test_cookies.py
app/config/: settings.py
app/middleware/: logger.py  retry.py
app/models/: trademark.py
app/schemas/: api_response.py
app/services/: downloader.py  search.py  session.py
docs/: API.md  ARCHITECTURE.md  RESEARCH.md  UNUMBIO-TECHNICAL-TEST.md  twinkling-fluttering-stroustrup.md
tests/: test_downloader.py  test_search.py  test_session.py
